--- a/index.html
+++ b/index.html
@@ -7,75 +7,87 @@
     <meta name="keywords" content="kozhevatov,cv, resume">
     <meta name="description" content="Это сайт - резюме Кожеватова Павла">
     <title>kozhevatov Resume</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <img src="img_me.jpeg" width="150" alt="Моё фото">
-    <h1>Кожеватов Павел</h1>
-    <p>Я изучаю <strong>Html верстку</strong> и увлекаюсь компьютерным железом, играми.</p>
-    <p>Я люблю <em>музыку, хочу путешествовать и переехать в другую страну и работать на себя.</em></p>
-    <h2>Список Социальных сетей:</h2>
-    <a href="https://vk.com/visualshock">Vkontakte</a>
-    <a href="https://www.youtube.com/user/ThePahaLord/channels">Youtube</a>
-    <a href="https://www.instagram.com/pavel_psiho/">Instagram</a>
-    <a href="https://hh.ru/resume/23eaded9ff09a2f7a00039ed1f5668596f4a52">HH</a>
-    <h2>Мои Хобби</h2>
-    <ol>
-        <li>Музыка</li>
-        <li>Компьютеры</li>
-        <li>Коллекционирование</li>
-        <li>MMORPG</li>
-    </ol>
-    <h2>Опыт Работы</h2>
-
-    <table>
-        <thead>
-            <tr>
-                <th>Название</th>
-                <th>Должность</th>
-                <th>Год</th>
-            </tr>
-        </thead>
-        <tbody>
-            <tr>
-                <td>DPDRUS</td>
-                <td>Старший Оператор</td>
-                <td>2016-2019</td>
-            </tr>
-            <tr>
-                <td>Спортмастер</td>
-                <td>Старший Кладовщик</td>
-                <td>2019-2020</td>
-            </tr>
-            <tr>
-                <td>Цифровой Век</td>
-                <td>Заправщих тонера</td>
-                <td>2021-now</td>
-            </tr>
-        </tbody>
-    </table>
-
-    <h2>Связаться со мной</h2>
-
-    <Form action=""> 
-        <div>
-                <label for="name">Ваше имя:</label>
-                <input type="text" id="name" placeholder="Введите имя">
-        </div>
-            <div>
-                    <label for="email">Ваш Email:</label>
-                    <input type="email" id="email" placeholder="Введите email">
+    <div class="conteiner">
+            
+        <div class="info">
+            <img src="img_me.jpeg" class="avatar" alt="Моё фото">
+            <div class="info-text">
+                <h1>Кожеватов Павел</h1>
+                <p>Я изучаю <strong>Html верстку</strong> и увлекаюсь компьютерным железом, играми.</p>
+                <p>Я люблю <em>музыку, хочу путешествовать и переехать в другую страну и работать на себя.</em></p>
+                <h2>Список Социальных сетей:</h2>
+                <a href="https://vk.com/visualshock">Vkontakte</a>
+                <a href="https://www.youtube.com/user/ThePahaLord/channels">Youtube</a>
+                <a href="https://www.instagram.com/pavel_psiho/">Instagram</a>
+                <a href="https://hh.ru/resume/23eaded9ff09a2f7a00039ed1f5668596f4a52">HH</a>
             </div>
-        <div>
-                <label for="massage">Ваше сообщение:</label>
-                <br>
-                <textarea name="" id="massage" cols="20" rows="5" placeholder="Введите сообщение..."></textarea>
         </div>
-        <div>
-            <button type="submit">Отправить!</button>
+        <div class="card bg-yellow">
+            <h2>Мои Хобби</h2>
+            <ol class="list">
+                <li>Музыка</li>
+                <li>Компьютеры</li>
+                <li>Коллекционирование</li>
+                <li>MMORPG</li>
+            </ol>
         </div>
-    </Form>
 
+        <div class="card bg-red">
+            <h2>Опыт Работы</h2>
 
+            <table class="table">
+                <thead>
+                    <!-- <tr>
+                        <th>Название</th>
+                        <th>Должность</th>
+                        <th>Год</th>
+                    </tr> -->
+                </thead>
+                <tbody>
+                    <tr>
+                        <td>DPDRUS</td>
+                        <td>Старший Оператор</td>
+                        <td>2016-2019</td>
+                    </tr>
+                    <tr>
+                        <td>Спортмастер</td>
+                        <td>Старший Кладовщик</td>
+                        <td>2019-2020</td>
+                    </tr>
+                    <tr>
+                        <td>Цифровой Век</td>
+                        <td>Заправщих тонера</td>
+                        <td>2021-now</td>
+                    </tr>
+                </tbody>
+            </table>
+        </div>
+
+        
+
+        <Form action="/" class="form"> 
+            <h2>Связаться со мной</h2>
+            <div class="form-row">
+                <div class="form-group">
+                        <label for="name">Ваше имя:</label>
+                        <input type="text" id="name" placeholder="Введите имя">
+                </div>
+                <div class="form-group">
+                            <label for="email">Ваш Email:</label>
+                            <input type="email" id="email" placeholder="Введите email">
+                </div>
+            </div>
+            <div class="form-group">
+                    <label for="massage">Ваше сообщение:</label>
+                    <textarea name="" id="massage" cols="20" rows="5" placeholder="Введите сообщение..."></textarea>
+            </div>
+            <input class="btn" type="submit" value="Отправить!">
+        </Form>
+
+    </div>
 
 
 
