--- a/index.html
+++ b/index.html
@@ -17,12 +17,13 @@
             <div class="info-text">
                 <h1>Кожеватов Павел</h1>
                 <p>Я изучаю <strong>Html верстку</strong> и увлекаюсь компьютерным железом, играми.</p>
-                <p>Я люблю <em>музыку, хочу путешествовать и переехать в другую страну и работать на себя.</em></p>
+                <p>Я люблю <em>музыку.</em></p>
                 <h2>Список Социальных сетей:</h2>
                 <a href="https://vk.com/visualshock">Vkontakte</a>
                 <a href="https://www.youtube.com/user/ThePahaLord/channels">Youtube</a>
                 <a href="https://www.instagram.com/pavel_psiho/">Instagram</a>
                 <a href="https://hh.ru/resume/23eaded9ff09a2f7a00039ed1f5668596f4a52">HH</a>
+                <a href="https://pavelpsiho.github.io/resume/">Github</a>
             </div>
         </div>
         <div class="card bg-yellow">
